--- a/week4/todo.html
+++ b/week4/todo.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <h1></h1>
+    <h2></h2>
+    <h3></h3>
     <script src='https://unpkg.com/axios/dist/axios.min.js'></script>
     <script src="todo.js"></script>
 </body>
